src/objects/Meeting_Material_Request__c.object
<CustomObject>
    <description>Used to track &amp; manage distribution lists</description>
    <fields>
        <fullName>Account_Estimate_Funding_Date__c</fullName>
        <label>Account Estimate Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Material Specifics and Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Finalized_Date__c</fullName>
        <label>Agreement Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribution_Period__c</fullName>
        <label>Attribution Period</label>
        <picklist>
            <picklistValues>
                <fullName>QTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Since Client Inception</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Note__c</fullName>
        <label>Activity Detail</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipLabel>Meeting Material Requests</relationshipLabel>
        <relationshipName>Meeting_Material_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Investment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account__c.Organization__c</field>
                <operation>equals</operation>
                <valueField>$Source.Client_Prospect_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account__c</referenceTo>
        <relationshipLabel>Meeting Material Requests</relationshipLabel>
        <relationshipName>Meeting_Material_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Prospect_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Material Requests</relationshipLabel>
        <relationshipName>Meeting_Material_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Page_Title__c</fullName>
        <label>Cover Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Time_period__c</fullName>
        <label>Transaction Period</label>
        <picklist>
            <picklistValues>
                <fullName>QTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 yr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_as_of_End_Month__c</fullName>
        <label>Data as of End Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_as_of_End_Year__c</fullName>
        <label>Data as of End Year</label>
        <picklist>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1979</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_as_of_Start_Month__c</fullName>
        <label>Data as of Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_as_of_Start_Year__c</fullName>
        <label>Data as of Start Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Due_to_Client__c</fullName>
        <label>Date Due to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method to Requester</label>
        <picklist>
            <picklistValues>
                <fullName>Mail(overnight)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronically</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardcopy (in person)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_materials_need_to_be_printed__c</fullName>
        <label>Do materials need to be printed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes: Hardcopy required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No: Only softcopy required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <description>End Date/Time of Period</description>
        <label>End Period</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>Meeting End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Government_Entity__c</fullName>
        <label>Government Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <label>Material Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client - CRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client - PRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introductory Transition Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRP Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRP Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic/Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Room_Needed__c</fullName>
        <label>MFS Meeting Room Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies_for_Each_Language__c</fullName>
        <description>This will store # of Copies for Each Language as a comma separated text.
Ex: English:4,German:5,French:23</description>
        <label>Number of Copies for Each Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_Section__c</fullName>
        <label>Overview Section</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <label>Performance Period</label>
        <picklist>
            <picklistValues>
                <fullName>QTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Since Client Inception</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Please_Enter_the_Desired_Time_Range__c</fullName>
        <label>Please Enter the Desired Time Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Meeting Material Requests</relationshipLabel>
        <relationshipName>Meeting_Material_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenters__c</fullName>
        <label>Presenters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sector_Scheme__c</fullName>
        <label>Sector Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>MFSI Standard (13 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GICS (11 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Research (8 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quant Sectors / Barra (14 Sectors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector Neutral – Industry schema used (N/A)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Since_Inception_Date__c</fullName>
        <label>Since Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Period__c</fullName>
        <description>Start Time of Period</description>
        <label>Start Period</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Meeting Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Syntax__c</fullName>
        <label>Syntax</label>
        <picklist>
            <picklistValues>
                <fullName>US English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UK English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <description>This field should auto populate to include the coverage team members for the organization to which the activity and meeting material requests are tied</description>
        <label>Team Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Periods_Covered__c</fullName>
        <label>Time Periods Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Most Recent Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Since Client Inception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See notes)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Translation_Languages__c</fullName>
        <label>Translation Languages</label>
        <picklist>
            <picklistValues>
                <fullName>French Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Chinese</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Translation_Required__c</fullName>
        <label>Translation Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trinket_Gift_Needed__c</fullName>
        <label>Trinket/Gift Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_CRP__c</fullName>
        <label>Use CRP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Material Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client_Prospect_Name__c</columns>
        <columns>Material_Name__c</columns>
        <columns>Material_Type__c</columns>
        <columns>Sector_Scheme__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CRP_PRP_Material_Requests</fullName>
        <columns>NAME</columns>
        <columns>Date_Due_to_Client__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Material_Name__c</columns>
        <columns>Material_Type__c</columns>
        <columns>Sector_Scheme__c</columns>
        <columns>Background__c</columns>
        <columns>Client_Prospect_Name__c</columns>
        <columns>Team_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Type__c</field>
            <operation>equals</operation>
            <value>CRP Only,PRP Only</value>
        </filters>
        <label>CRP &amp; PRP Material Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Client_Generic_Sales_Material_Requests</fullName>
        <columns>NAME</columns>
        <columns>Date_Due_to_Client__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Material_Name__c</columns>
        <columns>Material_Type__c</columns>
        <columns>Sector_Scheme__c</columns>
        <columns>Background__c</columns>
        <columns>Client_Prospect_Name__c</columns>
        <columns>Team_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Material_Type__c</field>
            <operation>equals</operation>
            <value>Client,Generic/Sales</value>
        </filters>
        <label>Client &amp; Generic/Sales Material Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Meeting_Material_Requests</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Date_Due_to_Client__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Material_Name__c</columns>
        <columns>Material_Type__c</columns>
        <columns>Sector_Scheme__c</columns>
        <columns>Background__c</columns>
        <columns>Client_Prospect_Name__c</columns>
        <columns>Team_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Due_to_Client__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:14</value>
        </filters>
        <label>Upcoming Meeting Material Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Meeting Material Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Material Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>